:sparkles: Enhance branding and toolbar visibility in admin dashboard with new logo positioning and fixed Symfony Web Debug Toolbar

--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -5,7 +5,8 @@ nav:
   dashboard: "Dashboard"
   my_cards: "My Cards"
   account: "Account"
-  settings: "Settings"
+  profile: "Profile"
+  branding: "Branding"
   collapse: "Collapse"
   expand: "Expand"
   toggle: "Toggle navigation"
