--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -1,6 +1,16 @@
 nav:
   login: "Login"
   register: "Register"
+  main: "Main Navigation"
+  dashboard: "Dashboard"
+  my_cards: "My Cards"
+  account: "Account"
+  profile: "Profile"
+  branding: "Branding"
+  collapse: "Collapse"
+  expand: "Expand"
+  toggle: "Toggle navigation"
+  skip_to_content: "Skip to main content"
 
 home:
   meta:
@@ -345,6 +355,8 @@ card:
     title: "About"
     placeholder: "Tell us about yourself..."
     max_length: "Bio cannot exceed 1000 characters"
+    help: "Describe yourself in a few words"
+  basic_info: "Basic Information"
   website:
     placeholder: "https://yourwebsite.com"
     invalid: "Please enter a valid URL"
@@ -392,6 +404,10 @@ card:
     secure_url: "Secure Public URL"
     copy_url: "Copy URL"
     url_copied: "URL copied to clipboard!"
+  label:
+    email: "Email"
+    phone: "Phone"
+    website: "Website"
   action:
     call: "Call"
     email: "Email"
@@ -441,6 +457,8 @@ branding:
   title: "Branding Configuration"
   access_denied: "Branding customization is only available for Pro and Enterprise plans"
   upgrade: "Upgrade Now"
+  preview:
+    title: "Live Preview"
   colors:
     title: "Brand Colors"
   primary_color: "Primary Color"
@@ -461,6 +479,9 @@ branding:
     size.small: "Small"
     size.medium: "Medium"
     size.large: "Large"
+    current: "Current logo"
+    help: "Upload a PNG, JPG, or SVG file (max 5MB)"
+
   save: "Save Branding"
   save.success: "Branding configuration saved successfully"
   template:
@@ -492,8 +513,16 @@ branding:
   template.access_denied: "Template customization is only available for Enterprise plans"
   validation.error: "Please correct the errors below"
   upload.error: "Logo upload failed. Please try again."
+  primary_color_picker:
+    picker: "Choose primary color"
+    help: "Choose a color or enter a hex code (e.g., #FF5733)"
+  secondary_color_picker:
+    picker: "Choose secondary color"
+    help: "Choose a color or enter a hex code (e.g., #6c757d)"
   color:
     accessibility:
+      title: "Color Accessibility"
+      help: "For better accessibility, use colors with a contrast ratio of at least 4.5:1 (WCAG AA) or 7:1 (WCAG AAA) against a white background."
       warning:
         primary: "Warning: Primary color contrast ratio is %s:1 (%s). For better accessibility, aim for at least 4.5:1 (WCAG AA) or 7:1 (WCAG AAA)."
         secondary: "Warning: Secondary color contrast ratio is %s:1 (%s). For better accessibility, aim for at least 4.5:1 (WCAG AA) or 7:1 (WCAG AAA)."
@@ -618,6 +647,7 @@ accessibility:
 # DASHBOARD COMPONENTS
 # ============================================================================
 dashboard:
+  title: "Dashboard"
   cards:
     account_overview: "Account Overview"
     plan_summary: "My Plan"
@@ -632,6 +662,35 @@ dashboard:
     view_details: "View Details"
     upgrade_plan: "Upgrade Plan"
     manage_cards: "Manage Cards"
+  plan:
+    title: "Plan"
+    unlimited: "Unlimited"
+    limited: "Limited"
+  usage:
+    title: "Card Usage"
+  quick_actions:
+    title: "Quick Actions"
+  activity:
+    event: "Event"
+    date: "Date/Time"
+    status: "Status"
+    login: "Login"
+    logout: "Logout"
+    registration: "Registration"
+    success: "Success"
+    failed: "Failed"
+  welcome: "Welcome back"
+  member_since: "Member since"
+  days: "days"
+  total_cards: "Total Cards"
+  active: "active"
+  view_all: "View All"
+
+header:
+  user_menu:
+    profile: "Profile"
+    logout: "Logout"
+
 error:
   access_denied:
     title: "Access Denied"
