:sparkles: Add 'All rights reserved' message in English and French translations, update admin layout with fixed footer, and enhance card display with improved styling

--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -122,6 +122,7 @@ home:
     terms: "Terms of Service"
     copyright: "© %year% Hermio. All rights reserved."
     social_title: "Follow us"
+    all_rights_reserved: "All rights reserved"
 
 account:
   my_plan:
