--- a/app/translations/messages.fr.yaml
+++ b/app/translations/messages.fr.yaml
@@ -122,6 +122,7 @@ home:
     terms: "Conditions d'utilisation"
     copyright: "© %year% Hermio. Tous droits réservés."
     social_title: "Suivez-nous"
+    all_rights_reserved: "Tous droits réservés"
 
 account:
   my_plan:
