:sparkles: Enhance QR code generation with optional logo support, improve pricing display with monthly/yearly toggle, and ensure iOS compatibility for vCard downloads

--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -58,6 +58,10 @@ home:
     title: "Simple and transparent pricing"
     subtitle: "Choose the plan that fits your needs"
     cta: "See all pricing"
+    monthly: "Monthly"
+    yearly: "Yearly"
+    per_month: "per month"
+    per_year: "per year"
     free:
       name: "Free"
       price: "$0"
@@ -75,7 +79,22 @@ home:
       feature2: "Custom branding"
       feature3: "Advanced analytics"
       feature4: "Priority support"
+      option_monthly: "Wallet addition +$2/month"
+      option_yearly: "Wallet addition +$20/year"
       cta: "Try Pro"
+    business:
+      name: "Business"
+      price: "$15"
+      period: "per month"
+      feature1: "25 business cards"
+      feature2: "Social networks"
+      feature3: "3 user accounts"
+      feature4: "Advanced branding"
+      feature5: "Advanced statistics"
+      feature6: "Wallet addition"
+      option_monthly: "API integration +$5/month"
+      option_yearly: "API integration +$50/year"
+      cta: "Try Business"
     enterprise:
       name: "Enterprise"
       price: "$29"
