--- a/app/translations/messages.fr.yaml
+++ b/app/translations/messages.fr.yaml
@@ -58,6 +58,10 @@ home:
     title: "Tarifs simples et transparents"
     subtitle: "Choisissez le plan qui correspond à vos besoins"
     cta: "Voir tous les tarifs"
+    monthly: "Mensuel"
+    yearly: "Annuel"
+    per_month: "par mois"
+    per_year: "par an"
     free:
       name: "Gratuit"
       price: "0€"
@@ -68,24 +72,29 @@ home:
       cta: "Commencer gratuitement"
     pro:
       name: "Pro"
-      price: "9€"
+      price: "5€"
       period: "par mois"
       badge: "Populaire"
-      feature1: "10 cartes de visite"
-      feature2: "Branding personnalisé"
-      feature3: "Statistiques avancées"
-      feature4: "Support prioritaire"
+      feature1: "5 cartes de visite"
+      feature2: "Réseaux sociaux"
+      feature3: "Branding personnalisé"
+      feature4: "Statistiques"
+      option_monthly: "Ajout au wallet +2€/mois"
+      option_yearly: "Ajout au wallet +20€/an"
       cta: "Essayer Pro"
-    enterprise:
+    business:
       name: "Enterprise"
-      price: "29€"
+      price: "15€"
       period: "par mois"
-      feature1: "Cartes illimitées"
-      feature2: "Gestion d'équipe"
-      feature3: "Templates personnalisés"
-      feature4: "Support dédié"
-      feature5: "API d'intégration"
-      cta: "Contacter les ventes"
+      feature1: "25 Cartes de visite"
+      feature2: "Réseaux sociaux"
+      feature3: "3 comptes utilisateurs"
+      feature4: "Branding avancé"
+      feature5: "Statistiques avancées"
+      feature6: "Ajout au wallet"
+      option_monthly: "API d'intégration +5€/mois"
+      option_yearly: "API d'intégration +50€/an"
+      cta: "Essayer Business"
   faq:
     title: "Questions Fréquentes"
     subtitle: "Tout ce que vous devez savoir sur Hermio"
